chore: add lambda function(nothing has been done yet)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -149,6 +149,7 @@
         "devDependencies": [
           "**/test/**",
           "**/build-tools/**",
+          "src/funcs/parser.lambda.ts",
           ".projenrc.ts",
           "projenrc/**/*.ts"
         ],
