--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "organization": false
   },
   "devDependencies": {
+    "@gammarers/jest-aws-cdk-asset-filename-renamer": "^0.5.24",
     "@stylistic/eslint-plugin": "^2",
+    "@types/aws-lambda": "^8",
     "@types/jest": "^29.5.14",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^8",
