--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
   "version": "0.0.0",
   "jest": {
     "coverageProvider": "v8",
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/@gammarers/jest-aws-cdk-asset-filename-renamer"
+    ],
     "testMatch": [
       "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
       "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
