--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -56,7 +56,7 @@
       "description": "Create a JavaScript bundle from src/funcs/parser.lambda.ts",
       "steps": [
         {
-          "exec": "esbuild --bundle src/funcs/parser.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/funcs/parser.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/*"
+          "exec": "esbuild --bundle src/funcs/parser.lambda.ts --target=\"node20\" --platform=\"node\" --outfile=\"assets/funcs/parser.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/* --sourcemap"
         }
       ]
     },
@@ -65,7 +65,7 @@
       "description": "Continuously update the JavaScript bundle from src/funcs/parser.lambda.ts",
       "steps": [
         {
-          "exec": "esbuild --bundle src/funcs/parser.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/funcs/parser.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/* --watch"
+          "exec": "esbuild --bundle src/funcs/parser.lambda.ts --target=\"node20\" --platform=\"node\" --outfile=\"assets/funcs/parser.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/* --sourcemap --watch"
         }
       ]
     },
