--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -238,7 +238,8 @@
       "name": "release",
       "description": "Prepare a release from \"main\" branch",
       "env": {
-        "RELEASE": "true"
+        "RELEASE": "true",
+        "MAJOR": "1"
       },
       "steps": [
         {
